# module28

./: .gitignore  pyproject.toml
task1/: config.ini  models.py  search.py  seed_authors.py  seed_quote.py
task2/: concumer_email.py  concumer_sms.py  connect.py  models.py  produser.py
