[tool.poetry]
name = "module28"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pip = "^23.2.1"
install = "^1.3.5"
pymongo = "^4.5.0"
mongoengine = "^0.27.0"
redis = "^5.0.0"
redis-lru = "^0.1.2"
pika = "^1.3.2"
faker = "^19.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
